--- a/index.html
+++ b/index.html
@@ -7,45 +7,52 @@
 
 </head>
 <style>
-    body{
+    body {
         width: 100%;
     }
-    input{
-        margin:5px;
+
+    input {
+        margin: 5px;
     }
-    input[type="button"]{
-        width: 50px;
-        display:block;
-        margin-left:auto;
+
+    button {
+        width: 60px;
+        display: block;
+        margin-left: auto;
+        margin-right:5px
     }
-    .localstorage{
+
+    .localstorage {
         background-color: gray;
-         border: 1px solid black; 
-         flex-direction: column; 
-         height: 150px; 
-         width: 250px;
+        border: 1px solid black;
+        flex-direction: column;
+        height: 150px;
+        width: 250px;
         margin: 50px;
+        display: flex;
+        justify-content: center;
     }
+
 </style>
+
 <body>
     <article style="display: flex; padding:10px;">
 
 
-        <div class="localstorage">  
+        <div class="localstorage">
             <form style="flex-direction: column;">
                 <input type="text" name="name" placeholder="name">
-                <input type="text" name="lastname" placeholder="lastname">
-                <input type="button" id="myButton" value="submit">
+                <input type="text" name="lastname" placeholder="surname">
+                <button id="myButton">Submit</button>
 
             </form>
         </div>
-        <div class="localstorage"> 
-            <div id="localstorage">Imie:</div>
-            <div id="result"> Nazwisko:</div>
-            <script src="java.js"></script>
-            <input type="button"  onclick="MyFunction()">
+        <div class="localstorage">
+            <button id="myButton2">Submit</button>
         </div>
+        
     </article>
+    <script src="java.js"></script>
 </body>
 
 </html>
