fixed value in buttons

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <form style="flex-direction: column;">
                 <input type="text" name="name" placeholder="name">
                 <input type="text" name="lastname" placeholder="surname">
-                <button id="myButton">Submit</button>
+                <button id="myButton">Save Data</button>
 
             </form>
         </div>
         <div class="localstorage">
-            <button id="myButton2">Submit</button>
+            <button id="myButton2">Show Data</button>
         </div>
         
     </article>
